# AntiHub-ALL

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  KIRO_IMPROVEMENTS.md  README.md  Report.md  docker-compose.core.yml  docker-compose.yml  update_all.bat  update_projects.ps1  update_projects.sh  渠道规范测试.csv
.github/workflows/: docker-images.yml
4-docs/: BACKEND_PUBLIC_ROUTES.csv  kiro-enterprise-account-analysis.md  mpb-080-acceptance-runbook.md  plugin-db-to-backend-migration.md  plugin_touchpoints.csv  spec-support-matrix.md  渠道规范支持.csv  渠道规范支持.xlsx
4-docs/tools/: scan_public_routes.py
AntiHook/: .build.config.example  .gitignore  README.md  build.sh  config.go  config_darwin.go  config_unsupported.go  config_windows.go  go.mod  index.html  install_mac.sh  main.go  main_darwin.go  main_windows.go  package-lock.json  package.json  tailwind.config.js  vite.config.ts
AntiHook/registry/: registry_darwin.go  registry_windows.go
AntiHook/src/: App.tsx  index.css
AntiHook/src-tauri/: Cargo.toml  tauri.conf.json
AntiHook/src-tauri/capabilities/: default.json
AntiHook/src-tauri/icons/: icon.icns
AntiHook/src-tauri/src/: config.rs  health.rs  main.rs
AntiHub/: Dockerfile  middleware.ts  next.config.ts
AntiHub-Backend/: .env.example  Dockerfile  README.md  docker-compose.yml
AntiHub-Backend/app/: main.py
AntiHub-Backend/tests/: test_api_key_schema.py  (+13 more)
AntiHub-plugin/: Dockerfile  package.json  schema.sql
issues/: 2026-01-31_10-57-53-report-md-plan.csv  2026-02-15_10-53-27-merge-plugin-into-backend.csv
plan/: 2026-01-31_10-23-51-report-md-plan.md
(+109 files in other folders)
