[package]
name = "antihook"
version = "0.1.0"
description = "AntiHook - AntiHub deployment configurator"
authors = ["AntiHub"]
license = "AGPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2.5"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
